# yarpc

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
docs/: build.sh
tests/python_client/: pyproject.toml
tests/python_client/src/python_client/: arrays_client.py  arrays_with_structs_client.py  dicts_client.py  dicts_with_arrays_client.py  dicts_with_structs_client.py  enums_client.py  enums_with_arrays_client.py  enums_with_dicts_client.py  enums_with_structs_client.py  main.py  minimal_client.py  structs_client.py  with_args_client.py
tests/python_client/src/python_client/arrays_gen/: arrays_client.py  arrays_with_structs_client.py  connection.py  simons_array.py  struct_array.py
tests/python_client/src/python_client/basic_gen/: connection.py  minimal_client.py  with_args_client.py
tests/python_client/src/python_client/dicts_gen/: connection.py  dict_keys_client.py  dicts_client.py  dicts_with_arrays_client.py  dicts_with_structs_client.py  simons_dict.py
tests/python_client/src/python_client/enums_gen/: color.py  connection.py  enum_client.py  enum_with_arrays_client.py  enum_with_dicts_client.py  enum_with_structs_client.py
tests/python_client/src/python_client/minimal_gen/: connection.py  minimal_client.py
tests/python_client/src/python_client/structs_gen/: connection.py  item.py  simple_struct.py  structs_client.py
tests/python_client/src/python_client/with_args_gen/: connection.py  with_args_client.py
tests/python_mocks/: README.md  pyproject.toml  run.sh
tests/python_mocks/src/python_mocks/: __init__.py  arrays_mock.py  arrays_with_structs_mock.py  client.py  dicts_keys_mock.py  dicts_mock.py  dicts_with_arrays_mock.py  dicts_with_structs_mock.py  enums_mock.py  enums_with_arrays_mock.py  enums_with_dicts_mock.py  enums_with_structs_mock.py  main.py  minimal_mock.py  primitives_mock.py  qml_instantiation_mock.py  structs_mock.py  utils.py  with_args_mock.py
tests/python_mocks/src/python_mocks/arrays_gen/: __init__.py  arrays_client_mock.py  arrays_with_structs_client_mock.py  backend_arrays_interface_mock.py  backend_arrays_with_structs_interface_mock.py  connection.py  simons_array.py  struct_array.py
tests/python_mocks/src/python_mocks/basic_gen/: backend_minimal_interface_mock.py  backend_primitives_interface_mock.py  backend_with_args_interface_mock.py  connection.py  minimal_client_mock.py  primitives_client_mock.py  with_args_client_mock.py
tests/python_mocks/src/python_mocks/dicts_gen/: __init__.py  backend_dict_keys_interface_mock.py  backend_dicts_interface_mock.py  backend_dicts_with_arrays_interface_mock.py  backend_dicts_with_structs_interface_mock.py  connection.py  dict_keys_client_mock.py  dicts_client_mock.py  dicts_with_arrays_client_mock.py  dicts_with_structs_client_mock.py  struct_dict.py
tests/python_mocks/src/python_mocks/enums_gen/: __init__.py  backend_enums_interface_mock.py  backend_enums_with_arrays_interface_mock.py  backend_enums_with_dicts_interface_mock.py  backend_enums_with_structs_interface_mock.py  color.py  connection.py  enum_struct.py  enums_client_mock.py  enums_with_arrays_client_mock.py  enums_with_dicts_client_mock.py  enums_with_structs_client_mock.py
tests/python_mocks/src/python_mocks/minimal_gen/: __init__.py  backend_minimal_interface_mock.py  connection.py  minimal_client_mock.py
tests/python_mocks/src/python_mocks/qml_instantiation_gen/: __init__.py  connection.py  qml_enum.py  qml_instantiation_client_mock.py  qml_instantiation_interface_mock.py  qml_struct.py
tests/python_mocks/src/python_mocks/structs_gen/: __init__.py  backend_structs_interface_mock.py  connection.py  simple_struct.py  structs_client_mock.py
tests/python_mocks/src/python_mocks/with_args_gen/: __init__.py  backend_primitives_interface_mock.py  backend_with_args_interface_mock.py  connection.py  (+2 more)
tests/python_service/: pyproject.toml  run.sh
tests/python_service/src/python_service/: arrays_service.py  arrays_with_structs_service.py  dict_keys_service.py  dicts_service.py  dicts_with_arrays_service.py  dicts_with_structs_service.py  enums_service.py  enums_with_arrays_service.py  enums_with_dicts_service.py  enums_with_structs_service.py  main.py  minimal_service.py  primitives_service.py  structs_service.py  with_args_service.py
tests/qt6_service/: CMakeLists.txt  build.sh  main.cpp  main.qml  run.sh
tests/qt6_service/interfaces/: Arrays.qml  ArraysWithStructs.qml  CMakeLists.txt  DictKeys.qml  Dictionaries.qml  DictsWithArrays.qml  DictsWithStructs.qml  Enums.qml  EnumsWithArrays.qml  EnumsWithDicts.qml  EnumsWithStructs.qml  Minimal.qml  Primitives.qml  QmlInstantiation.qml  Structs.qml  WithArgs.qml
yarpc/: README.md  pyproject.toml  run_tests.sh
yarpc/src/yarpc/: definitions_loader.py  definitions_resolver.py  filters.py  generator.py  main.py  spec_loader.py  spec_resolver.py  specification_loader.py  templating_engine.py  utils.py
yarpc/src/yarpc/languages/: __init__.py  base_language.py  python.py
yarpc/src/yarpc/schema/: builtin.schema.json  common.schema.json  enum.schema.json  interface.schema.json  method.schema.json  property.schema.json  python.schema.json  root.schema.json  signal.schema.json  struct.schema.json
yarpc/src/yarpc/templates/: dbus_common.j2
yarpc/tests/: test_utils.py
(+315 files in other folders)
