[project]
name = "yarpc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "dbus-next>=0.2.3",
    "jsonschema>=4.20.0",
    "Jinja2>=3.1.2",
    "behave>=1.2.6",
    "pytest>=7.4.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
