[project]
name = "python_mocks"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = "dummy@mail.com"},
]
dependencies = [
    "dbus-next>=0.2.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=python-mocks",
]
