[project]
name = "python_mocks"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = "dummy@mail.com"},
]
dependencies = [
    "dbus-next>=0.2.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mock = "python_mocks.main:main"


[tool.pdm]
distribution = false
[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=python-mocks",
]
